--- a/themes/custom/metallic/scss/modules/_topbar.scss
+++ b/themes/custom/metallic/scss/modules/_topbar.scss
@@ -209,7 +209,7 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
 
           a {
             color: $topbar-link-color;
-            display: inline-block;
+//            display: inline-block;
             font-weight: $topbar-title-weight;
             padding: 0 $topbar-link-padding / 3;
             width: 75%; 
